--- a/signup.html
+++ b/signup.html
@@ -10,7 +10,7 @@
   <link rel="stylesheet" href="signup.css">
 
   <!-- Your old global JS. This still has UI functions you might be using elsewhere. -->
-  <script src="App.js" defer></script>
+  <script src="App.html" defer></script>
 </head>
 
 <body>
