Owner Dashboard and Item Availability (Premade Menu)

--- a/index.html
+++ b/index.html
@@ -24,6 +24,7 @@
         <li><a href="menu.html">Menu</a></li>
         <li><a href="about.html">About Us</a></li>
         <li><a href="contact.html">Contact</a></li>
+        <li id="dashboardTab" style="display:none;"><a href="dashboard.html">Dashboard</a></li>
       </ul>
     </nav>
     
@@ -133,5 +134,43 @@
   <!-- Scripts -->
   <!-- Catering modal functionality (open/close, form validation, submission) -->
   <script src="catering.js"></script>
+
+  <script type="module">
+  import { auth } from './auth.js';
+  import { onAuthStateChanged } from "https://www.gstatic.com/firebasejs/10.13.1/firebase-auth.js";
+
+  const OWNER_EMAIL = "isabelmuniz001@gmail.com";
+
+  onAuthStateChanged(auth, (user) => {
+    const dashboardTab = document.getElementById("dashboardTab");
+    const signupBtn = document.getElementById("signupBtn");
+    const logoutBtn = document.getElementById("logoutBtn");
+
+    if (user && user.email === OWNER_EMAIL) {
+      // Owner logged in → show dashboard + logout
+      dashboardTab.style.display = "block";
+      signupBtn.style.display = "none";
+      logoutBtn.style.display = "inline-block";
+    } else if (user) {
+      // Normal customer logged in → hide dashboard
+      dashboardTab.style.display = "none";
+      signupBtn.style.display = "none";
+      logoutBtn.style.display = "inline-block";
+    } else {
+      // No one logged in → only show SignUp
+      dashboardTab.style.display = "none";
+      signupBtn.style.display = "inline-block";
+      logoutBtn.style.display = "none";
+    }
+
+    // Logout handling
+    logoutBtn?.addEventListener("click", () => {
+      auth.signOut().then(() => {
+        window.location.href = "index.html";
+      });
+    });
+  });
+</script>
+
 </body>
 </html>
