--- a/success.html
+++ b/success.html
@@ -122,6 +122,7 @@
         <li><a href="menu.html">Menu</a></li>
         <li><a href="#">About Us</a></li>
         <li><a href="#">Contact</a></li>
+        <li id="dashboardTab" style="display:none;"><a href="dashboard.html">Dashboard</a></li>
       </ul>
     </nav>
     <!-- Sign up button (shown when user is not logged in) -->
